@@ -1,14 +1,13 @@
 package com.rovger.utils;
 
+import org.apache.commons.codec.binary.Base64;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Decoder;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
-import java.util.Base64;
 
 /**
  * @Description: AES加解密算法
@@ -47,7 +46,7 @@ public class CrypterUtilV2 {
             SecretKeySpec keySpec = new SecretKeySpec(key.getBytes(), AES);
             cipher.init(Cipher.ENCRYPT_MODE, keySpec);
             byte[] encrypted = cipher.doFinal(decryptStr.getBytes());
-            return Base64.getEncoder().encodeToString(encrypted);
+            return Base64.encodeBase64String(encrypted);
         } catch (Exception e) {
             e.printStackTrace();
             return null;
@@ -64,7 +63,7 @@ public class CrypterUtilV2 {
     public static String decrypt(String encryptStr, String key) throws Exception {
         try {
             String srcDecode = URLDecoder.decode(encryptStr, UTF_8);
-            byte[] encrypted = new BASE64Decoder().decodeBuffer(srcDecode);
+            byte[] encrypted = Base64.decodeBase64(srcDecode);
             Cipher cipher = Cipher.getInstance(CIPHER_MODE);
             SecretKeySpec keySpec = new SecretKeySpec(key.getBytes(), AES);
             cipher.init(Cipher.DECRYPT_MODE, keySpec);
